--- a/Views/User/Templates/Signup/style.css
+++ b/Views/User/Templates/Signup/style.css
@@ -62,7 +62,7 @@ form input {
 }
 
 .card {
-  background: #000;
+  background: #000000ad;
   border-radius: 10px;
   box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
